email adn other crap

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "dotenv": "^5.0.1",
     "express": "~4.15.2",
+    "express-partial": "^0.1.0",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
+    "nodemailer": "^4.6.4",
     "request": "^2.86.0",
     "serve-favicon": "~2.4.2"
   }
