--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
     "nodemailer": "^4.6.4",
+    "nodemailer-smtp-transport": "^2.7.4",
     "request": "^2.86.0",
     "serve-favicon": "~2.4.2"
   }
